--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">AndroidHat</string>
+    <string name="start_button_text">Начать игру!</string>
+    <string name="prepare_button_text">Подготовить игру</string>
+    <string name="word_counter_text">Слов в шляпе: </string>
+    <string name="player_counter_text">Игроков: </string>
 </resources>
